Java 17 throughout